--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -3,7 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
+    link(href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,700',
+    rel='stylesheet',
+    type='text/css')
+    block head
+
   body
     block content
 
+    script(type="text/javascript", src="js/libs.min.js")
     block scripts
