changed build to use connect-assets for js loading, added ng skeleton app

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -26,7 +26,7 @@ body{
     margin-bottom: 0px;
     position: relative;
     top: 10px;
-    background: url('/img/cs-primary-small.png') no-repeat;
+    background: url('/images/cs-primary-small.png') no-repeat;
   }
 }
 
