--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -11,7 +11,13 @@ block content
       .main-view(ng-view)
 block scripts
   != js("app")
+
+  //Note: corespring-ng-services requires that you create a service called 'CorespringConfig'
+  //That contains one property: url
   script(type="text/javascript")
-    $(document).ready(function(){
-        console.log("jquery loaded");
-    });
+    angular.module('developer-toolkit')
+      .factory('CorespringConfig', [function (){
+         return {
+           url: "#{corespringUrl}"
+         }
+    }]);
