--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -1,5 +1,5 @@
 doctype 5
-html
+html(xmlns="http://www.w3.org/1999/html")
   head
     title= title
     link(rel='stylesheet', href='/bootstrap/css/bootstrap.css')
