tweaked layout a bit

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -1,7 +1,7 @@
 @grey: #8a8d8e;
 @green: #92d300;
 
-* {
+body {
   font-family: 'Ubuntu', sans-serif;
 }
 
@@ -28,6 +28,10 @@ body {
     top: 10px;
     background: url('/images/cs-primary-small.png') no-repeat;
   }
+
+  a{
+    cursor: pointer;
+  }
 }
 
 .main-content {
@@ -49,6 +53,13 @@ body {
     * {
       margin: 5px;
     }
+  }
+}
+
+.launcher{
+  textarea{
+    width: 100%;
+    height: 500px;
   }
 }
 
