--- a/server/views/bits/tokenGenerator.jade
+++ b/server/views/bits/tokenGenerator.jade
@@ -3,7 +3,7 @@
 
     .form-inline
       label Access Token
-      input.input(type="text", placeholder="your token here..", ng-model="accessToken")
+      input.input(type="text", placeholder="your token here..", ng-model="appVars.accessToken")
       label Generate one
       input.input(type="text", placeholder="clientId", ng-model="clientId")
       input.input(type="text", placeholder="clientSecret", ng-model="clientSecret")
