--- a/server/views/mixins/search.jade
+++ b/server/views/mixins/search.jade
@@ -1,5 +1,5 @@
 mixin search-form(legend)
-  form(ng-controller="Search")
+  form(ng-controller="SearchForm")
     fieldset
       legend #{legend}
       table
