changed logic so that token, itemId and clientId are put on to the url for the launcher

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -57,9 +57,16 @@ body {
 }
 
 .launcher{
+
+  .CodeMirror {
+    /* Set height, width, borders, and global font properties here */
+    height: 550px;
+  }
+
+
   textarea{
     width: 100%;
-    height: 500px;
+    height: 800px;
   }
 }
 
