revert clientId setting - we get the client id back when we encrypt options

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -59,8 +59,8 @@ body {
 .launcher{
 
   .CodeMirror {
-    /* Set height, width, borders, and global font properties here */
-    height: 550px;
+    height: 520px;
+    font-size: 13px;
   }
 
 
