--- a/server/views/partials/launcher.jade
+++ b/server/views/partials/launcher.jade
@@ -1,13 +1,42 @@
-h4 Launcher
-a(ng-click="backToSearch()") << Search
+include ../mixins/form-items
+
+.launcher
+  form.form-horizontal
+    textarea(ui-codemirror="codemirrorOptions",
+    style="height: 500px",
+    ng-model="editorText")
+    .buttons
+      button.btn-success.btn-small(ng-click="copyToClipboard()") Copy to clipboard
+      button.btn-success.btn-small(ng-click="previewInNewWindow()") Preview in new window
 
 
-form.form-horizontal.launcher
-  .control-group
-    label.control-label Mode
-    .controls(style="position:relative;left: 10px;")
-      label.inline.radio(ng-repeat="m in modes")
-        input.controls(type="radio", ng-model="$parent.mode", name="mode", value="{{m.mode}}")
-        | {{m.mode}}
+  form.form-horizontal
+    fieldset
+      legend Config options
 
-  textarea( ui-codemirror="codemirrorOptions", style="height: 500px",ng-model="editorText")
+    .control-group
+      label.control-label Mode
+      .controls
+        label.inline.radio(ng-repeat="m in modes")
+          input.controls(type="radio", ng-model="options.mode", name="mode", value="{{m.mode}}")
+          | {{m.mode}}
+        span.js-override.nudge-down Allow js override?
+          input(type="checkbox", ng-model="overrides.mode")
+
+    mixin input('itemId', 'Item')
+    mixin input('sessionId', 'Session')
+    mixin input('assessmentId', 'Assessment')
+
+    .control-group(ng-show="show('expires')")
+      label.control-label Expires
+      input.controls(ui-jq="datepicker", type="text", ng-model="pickerExpires", name="expires")
+
+    .control-group
+      label.control-label Role
+      .controls
+        label.inline.radio
+          input(type="radio", ng-model="options.role", value="student", name="role")
+          | Student
+        label.inline.radio
+          input(type="radio", ng-model="options.role", value="instructor", name="role")
+          | Instructor
