--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -3,6 +3,7 @@ extends layout
 block head
   link(href="/components/codemirror/lib/codemirror.css", rel="stylesheet")
   link(href="/components/codemirror/theme/elegant.css", rel="stylesheet")
+  link(href="/components/corespring-bootstrap-datepicker/css/datepicker.css", rel="stylesheet")
   != css("app")
 
 block content
