added error message for invalid client id / secret

--- a/server/views/bits/tokenGenerator.jade
+++ b/server/views/bits/tokenGenerator.jade
@@ -1,7 +1,8 @@
 .token-generator(ng-controller="TokenGenerator")
   .well
-    .form-inline
-      input.input(type="text", placeholder="clientId", ng-model="appVars.clientId")
-      input.input(type="text", placeholder="clientSecret", ng-model="appVars.clientSecret")
-      button.btn-small.btn-success(ng-click="generateToken()") {{generateButtonLabel}}
+    form(ng-submit="generateToken()").form-inline
+      input.input(type="text", placeholder="clientId", ng-model="appVars.clientId", required)
+      input.input(type="text", placeholder="clientSecret", ng-model="appVars.clientSecret", required)
+      button.btn-small.btn-success(type="submit") {{generateButtonLabel}}
       input.input(type="text", placeholder="your token here..", ng-model="appVars.accessToken")
+      .error(ng-show="errorMessage") {{errorMessage}}
