--- a/server/views/partials/search.jade
+++ b/server/views/partials/search.jade
@@ -1,6 +1,19 @@
-include ../mixins/search
 .search-and-results(ng-show="appVars.accessToken")
-  mixin search-form("Find Items")
+  form(ng-controller="SearchForm")
+    fieldset
+      legend Find Items
+      table
+        tr
+          td
+            label Keyword
+            input(type="text", placeholder="Type something…", ng-model="keyword")
+          td
+            label Collection
+            select(ng-model="collection", ng-options="c.name for c in collections")
+          td
+            label &nbsp;
+            button.btn-primary.pull-left.btn(type="submit", ng-click="search()") Search
+      .error(ng-show="errorMessage") {{errorMessage}}
   .search-results(ng-controller="SearchResults")
     .item
       table
@@ -20,3 +33,4 @@ include ../mixins/search
             a(ui-jq="tooltip", ui-options="{title: buildStandardTooltip(i.standards)}") {{buildStandardLabel(i.standards)}}
           td.action
             button.btn-success.btn-small(ng-click="getCode(i)") Get Code
+    .error(ng-show="appVars.searchCount == 0") No items found
