--- a/server/views/bits/tokenGenerator.jade
+++ b/server/views/bits/tokenGenerator.jade
@@ -1,8 +1,15 @@
 .token-generator(ng-controller="TokenGenerator")
-  .well
-    form(ng-submit="generateToken()").form-inline
-      input.input(id='clientId',type="text", placeholder="clientId", ng-model="appVars.clientId", required)
-      input.input(id='clientSecret',type="text", placeholder="clientSecret", ng-model="appVars.clientSecret", required)
-      button.btn-small.btn-success(type="submit") {{generateButtonLabel}}
-      input.input(type="text", placeholder="your token here..", ng-model="appVars.accessToken")
-      .error(ng-show="errorMessage") {{errorMessage}}
+  span(content-toggler, ng-model="showTokenForm")
+    #button
+      i(ng-class="getIconClass(appVars)", style="font-size: 20px;")
+      span.token-label Access Token
+    #content
+      .arrow
+      .popover-title {{getTokenFormTitle(appVars)}}
+      .popover-content
+        form(ng-submit="generateToken()").form-inline
+          input.input(id='clientId',type="text", placeholder="clientId", ng-model="appVars.clientId", required)
+          input.input(id='clientSecret',type="text", placeholder="clientSecret", ng-model="appVars.clientSecret", required)
+          button.btn-small.btn-success(type="submit") {{generateButtonLabel}}
+          input.input(type="text", placeholder="your token here..", ng-model="appVars.accessToken")
+          .error(ng-show="errorMessage") {{errorMessage}}
