--- a/server/views/bits/tokenGenerator.jade
+++ b/server/views/bits/tokenGenerator.jade
@@ -10,6 +10,7 @@
         form(ng-submit="generateToken()").form-inline
           input.input(id='clientId',type="text", placeholder="clientId", ng-model="appVars.clientId", required)
           input.input(id='clientSecret',type="text", placeholder="clientSecret", ng-model="appVars.clientSecret", required)
+          .alert(ng-show="errorMessage")
+            | {{errorMessage}}
           button.btn-small.btn-success(type="submit") {{generateButtonLabel}}
           input.input(type="text", placeholder="your token here..", ng-model="appVars.accessToken")
-          .error(ng-show="errorMessage") {{errorMessage}}
