more ui polish - content-toggler now js file

--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -4,6 +4,7 @@ block head
   link(href="/components/codemirror/lib/codemirror.css", rel="stylesheet")
   link(href="/components/codemirror/theme/elegant.css", rel="stylesheet")
   link(href="/components/corespring-bootstrap-datepicker/css/datepicker.css", rel="stylesheet")
+  link(href="/components/select2/select2.css", rel="stylesheet")
   != css("app")
 
 block content
