--- a/server/views/partials/search.jade
+++ b/server/views/partials/search.jade
@@ -1,10 +1,11 @@
 .search-and-results(ng-show="appVars.accessToken && !appVars.apiCallFailed")
   .sub-menu(ng-controller="SearchForm")
     form.navbar-search.pull-left
-      span Find Items
+      span(style="padding-left:10px;") Find Items
       input.nudge(
         type="text",
         on-enter="search()",
+        ng-model="keyword",
         class="search-query",
         placeholder="Search")
 
@@ -23,7 +24,7 @@
       | {{appVars.searchCount}}
 
   .search-results(ng-controller="SearchResults")
-    .item
+    .header
       table
         tr
           th.title Title
@@ -32,6 +33,8 @@
           th.type Item Type
           th.standard Standard(s)
           th.action Actions
+    .item
+      table
         tr(ng-repeat="i in appVars.searchItems")
           td.title(ng-bind-html-unsafe="i.title")
           td.subject {{renderPrimarySubject(i.primarySubject)}}
