--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -10,7 +10,7 @@
 
 body {
   font-family: 'Ubuntu', sans-serif;
-  background-color: lighten(desaturate(@green, 40%), 50%);
+  background-color: lighten(@grey, 40%);
 
   .navbar-fixed-top {
     .navbar-inner {
@@ -175,7 +175,22 @@ body {
     height: 800px;
   }
 }
-
+.welcome-view{
+  .hero-unit{
+    h1{
+      font-weight: lighter;
+      color: darken(@grey, 10%);
+    }
+    .icon-hand-up{
+      margin-left: 10px;
+      margin-right: 10px;
+      font-size: 30px;
+    }
+    p{
+      color: darken(@grey, 20%);
+    }
+  }
+}
 .search-and-results {
 
   td {
@@ -262,6 +277,7 @@ body {
       position: relative;
       top: -2px;
       left: 5px;
+      color: darken(@grey, 15%);
     }
   }
   #content {
@@ -277,7 +293,7 @@ body {
 .icon-token-not-ok,
 .icon-token-unknown,
 .icon-token-ok {
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.32);
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
 .icon-token-unknown {
