search results styling

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -204,6 +204,15 @@ body {
 
     .item {
       margin-top: @bar-height * 2;
+      table{
+        td{
+          font-size: 12px;
+        }
+        .title{
+          text-overflow: ellipsis;
+          height: 30px;
+        }
+      }
     }
     .header {
       position: fixed;
