added when-scrolled to search results

--- a/client/assets/css/app.less
+++ b/client/assets/css/app.less
@@ -240,6 +240,11 @@ body {
           vertical-align: top;
           background-color: white;
         }
+        .title{
+          max-width: 400px;
+          min-width: 200px;
+          width:400px;
+        }
         .action {
           width: 100px;
         }
